fixed video wrap

--- a/css/trimigos.css
+++ b/css/trimigos.css
@@ -335,7 +335,7 @@ strong {
 /*---------------------------------------
   VIDEO              
 -----------------------------------------*/
-.-wrapvideo {
+.video-wrap {
   z-index: -100;
   object-fit: cover;
 }
